k8s/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sns-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: sns-tls-secret
  rules:
  - host: localhost
    http:
      paths:
      - path: /payment(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment
            port:
              number: 3000
      - path: /subscriptions(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: subscriptions
            port:
              number: 3001
